crates/skw-contract-sdk/compilation_tests/metadata_invalid_rust.stderr
error: Failed to parse code decorated with `metadata!{}` macro. Only valid Rust is supported.
  --> compilation_tests/metadata_invalid_rust.rs:3:1
   |
3  | / metadata! {
4  | | FOOBAR
5  | |
6  | | #[skw_bindgen]
...  |
17 | | }
18 | | }
   | |_^
   |
   = note: this error originates in the macro `metadata` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `skw_bindgen`
 --> compilation_tests/metadata_invalid_rust.rs:1:24
  |
1 | use skw_contract_sdk::{skw_bindgen, metadata};
  |                        ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `BorshDeserialize`, `BorshSerialize`
 --> compilation_tests/metadata_invalid_rust.rs:2:13
  |
2 | use borsh::{BorshDeserialize, BorshSerialize};
  |             ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^
